Add reservation disponibilty
